technical specification #11 improved according with reveiwer's comments